--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img class="img2" src="./images/bg-pattern-bottom.svg">
   </div>
   <div class="card">
-    <img src="./images/bg-pattern-card.svg">
+    <img class="patternCard" src="./images/bg-pattern-card.svg">
     <div class="picture"><img src="./images/image-victor.jpg" alt=""></div>
     <p class="mainInfo"> Victor Crest 
       <span class="age">26</span>
