--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-  
+
   <title>Frontend Mentor | Profile card component</title>
 
 </head>
+
 <body>
-  <div class="background">
-    <img class="img1" src="./images/bg-pattern-top.svg">
-    <img class="img2" src="./images/bg-pattern-bottom.svg">
-  </div>
-  <div class="card">
-    <img class="patternCard" src="./images/bg-pattern-card.svg">
-    <div class="picture"><img src="./images/image-victor.jpg" alt=""></div>
-    <p class="mainInfo"> Victor Crest 
-      <span class="age">26</span>
-      <span class="city">London</span>
-    </p>
-    <div class="info">
-      <p>80K<span>Followers</span></p>
-      <p>803K<span>Likes</span></p>
-      <p>1.4K<span>Photos</span></p>
+  <div class="container">
+    <div class="card">
+      <img class="picture" src="./images/image-victor.jpg" alt="">
+      <p class="mainInfo"> Victor Crest
+        <span class="age">26</span>
+        <span class="city">London</span>
+      </p>
+      <div class="info">
+        <p>80K<span>Followers</span></p>
+        <p>803K<span>Likes</span></p>
+        <p>1.4K<span>Photos</span></p>
+      </div>
     </div>
   </div>
+
   <!--<div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Asmaa Mahmoud Khalaf</a>.
   </div>-->
 </body>
+
 </html>
