--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="container">
     <div class="card">
-      <img class="picture" src="./images/image-victor.jpg" alt="">
+      <img class="picture" src="./images/image-victor.jpg" alt="person picture">
       <p class="mainInfo"> Victor Crest
         <span class="age">26</span>
         <span class="city">London</span>
@@ -31,10 +31,10 @@
     </div>
   </div>
 
-  <!--<div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Asmaa Mahmoud Khalaf</a>.
-  </div>-->
+    Coded by <a href="https://github.com/AsmaaMK" target="_blank">Asmaa Mahmoud Khalaf</a>.
+  </div>
 </body>
 
 </html>
